padthv1 - An old-school additive polyphonic synthesizer
-------------------------------------------------------

ChangeLog


GIT HEAD

- Reduced minimum envelope stage time from 2msec to 500usec.
- Desktop entry specification file is now finally independent
  from build/configure template chains.
- Updated target path for freedesktop.org's AppStream metainfo
  file (formerly AppData).


0.8.4  2017-08-22  A Late-Summer'17 release.

- First public release.


0.8.3  2017-07-20  Initial change-log entry.