@@ -887,7 +887,7 @@
            </widget>
           </item>
           <item>
-           <widget class="padthv1widget_check" name="Def1MonoKnob">
+           <widget class="padthv1widget_radio" name="Def1MonoKnob">
             <property name="toolTip">
              <string>DEF1 Mono</string>
             </property>
